# cmake-catch2-ci-example

./: README.md
src/lib/foo/: CMakeLists.txt
